--- a/sdk/app/i2c_testing/Makefile
+++ b/sdk/app/i2c_testing/Makefile
@@ -23,7 +23,7 @@ MODULE_NAME := $(notdir $(CURDIR))
 
 include $(HOME_TREE)/mak_def.inc
 
-CXXSRC += i2c_comm.cpp
+CXXSRC += main.cpp
 C_INCLUDES += -I$(CURDIR)/../../sdk/include -I$(CURDIR)/../../sdk/src
 
 EXTRA_OBJ := 
